# hermes

./: .gitignore  .gitmodules  AUTHORS  AUTHORS.md  CMakeLists.txt  LICENSE.md  Makefile  Makefile.inc  README.md  test.c  test_all.sh  test_empty.sh
cmake_modules/: FindGSL.cmake
doc/: documentation.aux  documentation.bbl  documentation.blg  documentation.tex  documentation.toc  references.bib
ext/mfpt_from_fftbor2d/: CMakeLists.txt  README.md  mfpt_from_fftbor2d.cpp
ext/population_from_fftbor2d/: CMakeLists.txt  population_from_fftbor2d.cpp
ext/population_from_rate_matrix/: CMakeLists.txt  README.md  all_structures_for_gggaaaccc__19_5_rate_move_without_hastings.csv  population_from_rate_matrix.c
h/: fftbor2d  fftbor2d_functions.h  fftbor2d_params.h  libmfpt_header.h  libspectral_header.h  mfpt  mfpt_data_structures.h  mfpt_energy_grid.h  mfpt_initializers.h  mfpt_params.h  mfpt_parser.h  multi_param  params.h  population  spectral  spectral_data_structures.h  spectral_functions.h  spectral_initializers.h  spectral_params.h  tpl  vienna_data_structures.h  vienna_functions.h
h/shared/: constants.h  libfftbor2d_header.h  libklp_matrix_header.h  libmfpt_header.h  libmulti_param_header.h  libpopulation_header.h  libspectral_header.h  libtpl_header.h  timers.h
h/vienna/: data_structures.h  energy_const.h  energy_par.h  externs.h  functions.h
mashup/equilibrium_from_transition_rate_matrix/: Makefile  README.md  all_structures_for_gggaaaccc__19_5_rate_move_with_hastings.csv  equilibrium_from_transition_rate_matrix.c  example_start_2_end_0.csv
mashup/mfpt_from_energy_grid/: Makefile  README.md  mfpt_from_energy_grid.cpp
mashup/mfpt_from_fftbor2d/: CMakeLists.txt  Makefile  README.md  mfpt_from_fftbor2d.cpp
mashup/population_from_energy_grid/: Makefile  README.md  population_from_energy_grid.cpp
mashup/population_from_fftbor2d/: CMakeLists.txt  Makefile  README.md  population_from_fftbor2d.cpp
mashup/population_from_rate_matrix/: CMakeLists.txt  Makefile  README.md  all_structures_for_gggaaaccc.txt  dot.ps  population_from_rate_matrix.c
src/fftbor2d/: CMakeLists.txt  Makefile  README.md  toy_sequence.fa
src/fftbor2d/cpp/: fftbor2d.cpp  fftbor2d_functions.cpp  fftbor2d_initializers.cpp  fftbor2d_params.cpp
src/fftbor2d/h/: data_structures.h  fftbor2d_data_structures.h  fftbor2d_functions.h  fftbor2d_initializers.h  fftbor2d_params.h  params.h
src/klp_matrix/: CMakeLists.txt
src/klp_matrix/c/: klp_matrix_functions.c  klp_matrix_initializers.c  klp_matrix_params.c  klp_matrix_parser.c
src/klp_matrix/h/: klp_matrix_data_structures.h  klp_matrix_functions.h  klp_matrix_initializers.h  klp_matrix_params.h  klp_matrix_parser.h
src/mfpt/: CMakeLists.txt  Makefile  README.md  example.csv
src/mfpt/c/: mfpt.c  mfpt_energy_grid.c  mfpt_functions.c  mfpt_initializers.c  mfpt_params.c  mfpt_parser.c  rna_mfpt.c
src/mfpt/h/: data_structures.h  energy_grid.h  functions.h  initializers.h  lapack_externs.h  mfpt_data_structures.h  mfpt_functions.h  mfpt_initializers.h  mfpt_params.h  mfpt_parser.h  params.h  parser.h
src/multi_param/: CMakeLists.txt  Makefile  multi_param.c  multi_param.h
src/multi_param/c/: multi_param.c
src/multi_param/h/: multi_param  multi_param.h
src/population/: CMakeLists.txt  Makefile  README.md
src/population/c/: population.c  population_functions.c  population_initializers.c  population_params.c  rna_population.c
src/population/h/: constants.h  data_structures.h  functions.h  initializers.h  params.h  population_constants.h  population_data_structures.h  population_functions.h  population_initializers.h  population_params.h
src/spectral/: Makefile  README.md
src/spectral/c/: rna_spectral.c  spectral_functions.c  spectral_initializers.c  spectral_params.c
src/spectral/h/: constants.h  data_structures.h  functions.h  initializers.h  params.h
src/tpl/: CMakeLists.txt  Makefile  tpl.c  tpl.h
test/: test_all.sh  test_empty.sh
