include(CheckCCompilerFlag)
include(CheckCXXCompilerFlag)

cmake_minimum_required(VERSION 2.6)

project(HERMES)

enable_language(Fortran)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake_modules")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${HERMES_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${HERMES_SOURCE_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${HERMES_SOURCE_DIR}/lib)

foreach(include_path ${ADDITIONAL_INCLUDE_PATHS})
  message(STATUS "Adding include path: ${include_path}")
  include_directories(${include_path})
endforeach(include_path ${ADDITIONAL_INCLUDE_PATHS})

foreach(library_path ${ADDITIONAL_LIBRARY_PATHS})
  message(STATUS "Adding library path: ${library_path}")
  link_directories(${library_path})
endforeach(library_path ${ADDITIONAL_LIBRARY_PATHS})

include_directories(${HERMES_SOURCE_DIR}/h)

macro(c_compiler_flag_test flag_name flag fallback_flag required)
  check_c_compiler_flag(${flag} ${flag_name})
  if(${flag_name})
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${flag}")
  elseif(${required})
    message(FATAL_ERROR "${flag} support is required by ${CMAKE_C_COMPILER}")
  elseif(${fallback_flag})
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${fallback_flag}")
  endif()
endmacro(c_compiler_flag_test)

macro(cxx_compiler_flag_test flag_name flag fallback_flag required)
  check_cxx_compiler_flag(${flag} ${flag_name})
  if(${flag_name})
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}")
  elseif(${required})
    message(FATAL_ERROR "${flag} support is required by ${CMAKE_CXX_COMPILER}")
  elseif(${fallback_flag})
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${fallback_flag}")
  endif()
endmacro(cxx_compiler_flag_test)

c_compiler_flag_test(C_STD_GNU99 "-std=gnu99" "" 1)
c_compiler_flag_test(C_PEDANTIC "-pedantic" "" 0)
c_compiler_flag_test(C_FUNROLL_LOOPS "-funroll-loops" "" 0)
c_compiler_flag_test(C_WALL "-Wall" "" 0)
c_compiler_flag_test(C_WEXTRA "-Wextra" "" 0)
c_compiler_flag_test(C_OFAST "-Ofast" "-O3" 0)
c_compiler_flag_test(C_MARCH "-march=native" "" 0)
c_compiler_flag_test(C_CLANG_ASSEMBLER "-Wa,-q" "" 0)

cxx_compiler_flag_test(CXX_STD_CXX11 "-std=c++11" "" 1)
cxx_compiler_flag_test(CXX_PEDANTIC "-pedantic" "" 0)
cxx_compiler_flag_test(CXX_FUNROLL_LOOPS "-funroll-loops" "" 0)
cxx_compiler_flag_test(CXX_WALL "-Wall" "" 0)
cxx_compiler_flag_test(CXX_WEXTRA "-Wextra" "" 0)
cxx_compiler_flag_test(CXX_OFAST "-Ofast" "-O3" 0)
cxx_compiler_flag_test(CXX_MARCH "-march=native" "" 0)
cxx_compiler_flag_test(CXX_CLANG_ASSEMBLER "-Wa,-q" "" 0)

add_subdirectory(src/tpl)
add_subdirectory(src/multi_param)
add_subdirectory(src/fftbor2d)
add_subdirectory(src/mfpt)
add_subdirectory(src/population)

add_subdirectory(mashup/mfpt_from_fftbor2d)
add_subdirectory(mashup/population_from_fftbor2d)
add_subdirectory(mashup/population_from_rate_matrix)
